--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,14 @@
 repos:
-  - repo: https://github.com/norwoodj/helm-docs
+  - repo: https://github.com/theEndBeta/yaml-docs
     rev: v1.2.0
     hooks:
-      - id: helm-docs
+      - id: yaml-docs
         args:
-          # Make the tool search for charts only under the `example-charts` directory
-          - --chart-search-root=example-charts
-
           # The `./` makes it relative to the chart-search-root set above
           - --template-files=./_templates.gotmpl
 
           # Repeating the flag adds this to the list, now [./_templates.gotmpl, README.md.gotmpl]
           # A base filename makes it relative to each chart directory found
           - --template-files=README.md.gotmpl
+
+          - --values-files=main.yml
