--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,20 +15,25 @@ jobs:
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: docker/setup-qemu-action@v1
-    - uses: docker/setup-buildx-action@v1
-    - uses: actions/setup-go@v2
-      with:
-        go-version: '^1.16.3'
-    - uses: actions/cache@v1
-      with:
-        path: /home/runner/go/pkg/mod
-        key: go-mod
-    - uses: goreleaser/goreleaser-action@v2
-      with:
-        args: release --snapshot --skip-sign
-    - if: always()
-      run: rm -f ${HOME}/.docker/config.json
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up docker buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.3'
+      - name: Log into quay,io
+        uses: redhat-actions/podman-login@v1
+        with:
+          username: theendbeta+theendbeta_github
+          password: ${{ secrets.THEENDBETA_QUAY }}
+          registry: quay.io
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          args: release --snapshot --skip-sign
