--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,19 +3,16 @@ before:
     - go mod download
     - go test ./...
 builds:
-  - main: ./cmd/helm-docs
+  - main: ./cmd/yaml-docs
     env:
       - CGO_ENABLED=0
     goarch:
       - amd64
       - arm
       - arm64
-    goarm:
-      - 6
-      - 7
     goos:
-      - darwin
       - linux
+      - darwin
       - windows
 archives:
   - replacements:
@@ -37,13 +34,12 @@ changelog:
 
 signs:
 - artifacts: checksum
-  args: ["-u", "9A43A53360334547EB66A9EEF1BBFDD85DF0F05F", "--output", "${signature}", "--detach-sign", "${artifact}"]
 
 nfpms:
-- vendor: helm-docs
-  homepage: https://github.com/norwoodj/helm-docs
-  maintainer: norwoodj
-  description: A tool for automatically generating markdown documentation for helm charts
+- vendor: yaml-docs
+  homepage: https://github.com/theEndBeta/yaml-docs
+  maintainer: theEndBeta
+  description: A tool for automatically generating markdown documentation for yaml charts
   license: GNU General Public License v3.0
   formats:
   - deb
@@ -54,60 +50,56 @@ nfpms:
 
 brews:
   - tap:
-      owner: norwoodj
+      owner: theEndBeta
       name: homebrew
     folder: Formula
-    homepage: https://github.com/norwoodj/helm-docs
-    description: Automatically generate markdown documentation for helm charts
+    homepage: https://github.com/theEndBeta/yaml-docs
+    description: Automatically generate markdown documentation for yaml charts
     install: |
-      bin.install "helm-docs"
+      bin.install "yaml-docs"
     test: |
-      system "#{bin}/helm-docs --version"
+      system "#{bin}/yaml-docs --version"
 dockers:
-  - goos: linux
-    goarch: amd64
-    dockerfile: Dockerfile
+  - goarch: amd64
     use_buildx: true
+    image_templates:
+      - thendbeta/{{ .ProjectName }}:{{ .Tag }}-amd64
+    dockerfile: Dockerfile
     build_flag_templates:
       - --platform=linux/amd64
-    image_templates:
-      - jnorwood/{{ .ProjectName }}:{{ .Tag }}-amd64
-  - goos: linux
-    goarch: arm64
-    dockerfile: Dockerfile
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description={{ .ProjectName }}
+      - --label=org.opencontainers.image.url=https://github.com/theEndBeta/{{ .ProjectName }}
+      - --label=org.opencontainers.image.source=https://github.com/theEndBeta/{{ .ProjectName }}
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+      - --label=org.opencontainers.image.licenses=GPLv3
+  - goarch: arm64
     use_buildx: true
+    image_templates:
+      - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64
+    dockerfile: Dockerfile
     build_flag_templates:
       - --platform=linux/arm64
-    image_templates:
-      - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64
-  - goos: linux
-    goarch: arm
-    goarm: 6
-    dockerfile: Dockerfile
-    use_buildx: true
-    build_flag_templates:
-      - --platform=linux/arm/v6
-    image_templates:
-      - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64v6
-  - goos: linux
-    goarch: arm
-    goarm: 7
-    dockerfile: Dockerfile
-    use_buildx: true
-    build_flag_templates:
-      - --platform=linux/arm/v7
-    image_templates:
-      - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64v7
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description={{ .ProjectName }}
+      - --label=org.opencontainers.image.url=https://github.com/theEndBeta/{{ .ProjectName }}
+      - --label=org.opencontainers.image.source=https://github.com/theEndBeta/{{ .ProjectName }}
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+      - --label=org.opencontainers.image.licenses=GPLv3
 docker_manifests:
-- name_template: jnorwood/{{ .ProjectName }}:{{ .Tag }}
+- name_template: thendbeta/{{ .ProjectName }}:{{ .Tag }}
   image_templates:
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-amd64
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64v6
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64v7
-- name_template: jnorwood/{{ .ProjectName }}:latest
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-amd64
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64v6
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64v7
+- name_template: thendbeta/{{ .ProjectName }}:latest
   image_templates:
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-amd64
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64v6
-    - jnorwood/{{ .ProjectName }}:{{ .Tag }}-arm64v7
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-amd64
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64v6
+    - thendbeta/{{ .ProjectName }}:{{ .Tag }}-arm64v7
